# res_loader

./: .gitignore  README.md  pyproject.toml
src/res_loader/: __init__.py  __main__.py  config.py  db.py  file_watcher.py  logger.py
src/res_loader/utils/: audio.py  file.py  video.py
