[project]
name = "res-loader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nevermore", email = "nevermoreluo@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.40",
    "watchdog>=3.0.0",
    "faster-whisper>=1.1.1",
    "av==14.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/res_loader"]



